# TradingBotMiroFish

./: .gitignore  AGENTS.md  AUDIT_MANIFEST.txt  AUDIT_SUMMARY.md  DELTA_NORMALIZATION.md  DUAL_TRACK_RESEARCH_LIVE.md  FEED_AUDIT_GUIDE.md  FEED_AUDIT_INDEX.md  LIVE_NOW.txt  OUTCOME_VALIDATION_READY.md  PHASE1_CLEAN_MANIFEST.txt  README.md  START_HERE.md  SUBAGENT_COMPLETION_REPORT.md  SUBAGENT_VALIDATION_COMPLETE.md  V3_POSITION_MACHINE_VERDICT.md  V3_TARGET_AUDIT_VERDICT.md  V4_DETECTOR_AUDIT_VERDICT.md  V4_DYNAMIC_TARGET_VERDICT.md  V4_EMPIRICAL_STATUS_FINAL.md  V4_VALIDATION_STATUS.md  debug_replay.py  es_replay_alert_backtest.py  generate_phase1_ledger.py  index.html  intraday_eval_now.py  live_phase2_alerts.py  live_phase2_clean.py  live_shadow_engine.py  live_shadow_run.py  phase1_clean_rebuild.py  phase1_rebuild_v2.py  phase2_backtest_clean.py  phase2_backtest_yesterday.py  phase3_liquidity_shadow.py  phase4_location_shadow.py  test_volume_momentum.py  trade_manager_implementation.md  volume_momentum_analysis.md
market-swarm-lab/: .env.example  .gitignore  BACKTEST_EXECUTION_REPORT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DETERMINISTIC_TEST_SUMMARY.md  EXECUTION_ENGINE_STATUS.md  FEED_INTEGRITY_COMPLETE.md  FINAL_RESEARCH_SUMMARY.md  FINAL_STATUS.md  FUNNEL_QUICK_START.md  IMPLEMENTATION_STATUS.md  INFRASTRUCTURE_REMEDIATION_SUMMARY.md  INSTRUMENTATION_SUMMARY.md  LIVE_TRADING_SETUP.md  Makefile  NEAR_MISS_IMPLEMENTATION.md  PARTIAL_RESULTS_DIAGNOSIS.md  PHASE1_DELIVERY_SUMMARY.md  PHASE1_INDEX.md  PHASE1_MANIFEST.txt  PHASE1_QUICKSTART.md  README.md  (+47 more)
(+384 files in other folders)
